# Auto-PCG-Serial-CheckTool

./: README.md  SETUP_ja.md  config.example.yaml  config.yaml  gen_verification_report.py  pyproject.toml  requirements.txt  起動_mac.command
src/tcg_linker/: __init__.py  bootstrap.py  browser.py  chrome_launcher.py  config.py  executor.py  gui.py  images.py  localrec.py  main.py  master.py  matcher.py  models.py  notify.py  report.py  vision.py  webui.py
src/tcg_linker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_executor.py  test_localrec.py  test_matcher.py
